--- a/build.gradle
+++ b/build.gradle
@@ -39,10 +39,11 @@ allprojects {
             subproject.getTasks().create("zixiePublishCommand", {
                 zixiePublishCommand()
             })
-//            rootProject.getTasks().getByName('buildEnvironment').doLast {
-//                System.err.println("zixiePublishCommand exex ")
-//                zixiePublishCommand()
-//            }
+            rootProject.getTasks().getByName('buildEnvironment').doLast {
+                System.err.println("组件依赖关系处理中，预计耗时较久，请耐心等待...")
+                zixiePublishCommand()
+                System.err.println("组件依赖关系处理已完成...")
+            }
         }
     }
 }
