--- a/build_module.gradle
+++ b/build_module.gradle
@@ -103,7 +103,7 @@ def zixiePublishCommand() {
     if (zixieIsDebug) println("showCommand")
     def moduleList = []
     zixieModuleInfo.each { projectName, subModuleList ->
-        if (projectName.startsWith("Lib") && checkModuleIsDev(projectName)) {
+        if (!isApplicaionModule(projectName) && checkModuleIsDev(projectName)) {
             moduleList.add(projectName)
         }
     }
@@ -174,6 +174,10 @@ def autoDependencies(String projectName, String moduleName) {
 
 }
 
+def isApplicaionModule(String projectName) {
+    return projectName == "APPTest"
+}
+
 ext {
     zixieMainProject = ext.mainProject
     zixieDevelopModule = ext.developModule
@@ -192,4 +196,5 @@ ext {
     zixieAutoDependencies = this.&autoDependencies
     checkModuleIsDev = this.&checkModuleIsDev
     checkModuleDependencies = this.&checkModuleDependencies
+    isApplicaionModule = this.&isApplicaionModule
 }
