--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,12 +6,12 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "LibGson"
+ext.mainProject = "LibHttpAdvanced"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"LibAndroid,LibThread,LibCommonUtils,LibCommonUIUtils,LibRequest,LibSqlite"
  */
-ext.developModule = "LibGson"
+ext.developModule = "LibHttpAdvanced"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -116,7 +116,7 @@ ext.moduleInfo = [
                 "dependenciesList": ["LibThread", "LibLog"]
         ],
         "LibHttpAdvanced"           : [
-                "version"         : "2.0.5",
+                "version"         : "2.0.7",
                 "artifactId"      : "lib-http-advanced",
                 "dependenciesList": ["LibHttpCommon", "LibGson"]
         ],
