--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,12 +6,12 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "LibWrapper"
+ext.mainProject = "APPTest"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"LibAndroid,LibThread,LibCommonUtils,LibCommonUIUtils,LibRequest,LibSqlite"
  */
-ext.developModule = "LibWrapper"
+ext.developModule = "LibGson"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -21,7 +21,7 @@ ext.includeALLDependOnDevelopModule = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "2.0.8"
+ext.moduleVersionName = "2.0.9"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -102,7 +102,7 @@ ext.moduleInfo = [
                 "dependenciesList": []
         ],
         "LibGson"                   : [
-                "version"         : "2.0.8",
+                "version"         : "2.0.7",
                 "artifactId"      : "lib-gson",
                 "dependenciesList": [
                         "com.google.code.gson:gson:${project.gson_version}",
@@ -116,7 +116,7 @@ ext.moduleInfo = [
                 "dependenciesList": ["LibThread", "LibLog"]
         ],
         "LibHttpAdvanced"           : [
-                "version"         : "2.0.8",
+                "version"         : "2.0.7",
                 "artifactId"      : "lib-http-advanced",
                 "dependenciesList": ["LibHttpCommon", "LibGson"]
         ],
@@ -234,7 +234,7 @@ ext.moduleInfo = [
                 ]
         ],
         "LibUtils"                  : [
-                "version"         : "2.0.8",
+                "version"         : "2.0.7",
                 "artifactId"      : "lib-utils",
                 "dependenciesList": [
                         "Router", "RouterAnnotation", "LibCommonUtils", "LibChannel", "LibTimer", "LibRequest",
@@ -243,7 +243,7 @@ ext.moduleInfo = [
                 ]
         ],
         "LibWrapper"                : [
-                "version"         : "2.0.8",
+                "version"         : "2.0.7",
                 "artifactId"      : "lib-wrapper",
                 "dependenciesList": ["LibUtils", "LibUIUtils"]
         ]
